--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -30,6 +30,17 @@
 
             }
         }
+        .icon-section{
+            a{
+            color: #fefe;
+            text-decoration: none;
+            font-size: 2rem;
+            padding: 0 10px;
+            &:first-child{
+                padding: 0 10px 0 0;
+            }
+            }
+        }
     }
 
     .content-area{
