--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,17 @@ html {
 
 }
 
+.hamburger-icon {
+    position: fixed;
+    right: 36px;
+    top: 36px;
+    padding: 20px;
+    .fas {
+        font-size: 2rem;
+        color: $color2;
+    }
+}
+
 .primarybtn{
     background: $color2;
     border-radius: 30px;
@@ -25,6 +36,7 @@ html {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 500;
+    margin-right: 15px;
 }
 
 .ghostbtn{
@@ -38,3 +50,4 @@ html {
     letter-spacing: 3px;
     font-weight: 500;
 }
+
