--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,11 +15,12 @@ html {
 
 }
 
-.hamburger-icon {
+.menu-icon {
     position: fixed;
     right: 36px;
     top: 36px;
     padding: 20px;
+    z-index: 11;
     .fas {
         font-size: 2rem;
         color: $color2;
@@ -27,6 +28,7 @@ html {
 }
 
 .primarybtn{
+    text-decoration: none;
     background: $color2;
     border-radius: 30px;
     text-align: center;
@@ -37,9 +39,16 @@ html {
     letter-spacing: 3px;
     font-weight: 500;
     margin-right: 15px;
+    transition: all 0.3s ease-in-out;
+    &:hover{
+        cursor: pointer;
+        background: $color1;
+        color: $color5;
+    }
 }
 
 .ghostbtn{
+    text-decoration: none;
     border: 4px solid $color1;
     border-radius: 30px;
     text-align: center;
@@ -49,5 +58,56 @@ html {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 500;
+    transition: all 0.3s ease-in-out;
+    &:hover{
+        cursor: pointer;
+        border: 4px solid $color2;
+        color: $color2;
+    }
 }
 
+#menu{
+    background: $color1;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        bottom: 0;
+        transform: translate3d(-100%,0,0);
+        z-index: 10;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+        transition: all .5s ease-in-out;
+    
+        nav{
+            width: 400px;
+            text-align: center;
+    
+            a{
+                display: block;
+                font-size: 2.3rem;
+                padding: 1rem;
+                text-decoration: none;
+                color: #fefe;
+                &:hover{
+                    color: $color2;
+                }
+            }
+        }
+    }
+
+.menu-active {
+    .menu-icon{
+        .fa{
+            color: #fefe;
+        }
+    }
+    #menu{
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        transform: translate3d(200%,0,0)
+    }
+}
