Started Resume page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import "reset";
 @import "variables";
 @import "home";
+@import "resume";
+@import "infosection";
 
 *{
     box-sizing: border-box;
