--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -1,4 +1,4 @@
-.porfolio {
+.work {
     .info-section{
         width: 20%;
     }
@@ -12,7 +12,7 @@
         height: 100%;
         overflow: hidden;
 
-        .category{
+        .work-section{
             margin-bottom: 56px;
 
             h1{
