--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@ body,
 html {
     font-size: 18px;
     background: $color1;
-    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     height: 100%;
 
 }
